Обновил конфигурацию фида
